# course_protein_language_modeling

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  topics.md
data/: Test_seed1.fasta  Test_seed1_aligned.aln
notebooks/: (template) seq_analysis.ipynb  embeddings.ipynb  model_training.ipynb  prediction.ipynb  prot_design.ipynb  seq_analysis.ipynb
ran/: embeddings.html  model_training.html  prediction.html  prot_design.html  seq_analysis.html
